--- a/www/css/screen.less
+++ b/www/css/screen.less
@@ -1,42 +1,45 @@
 @import "../less/bootstrap.less";
+/* Sticky footer styles
+-------------------------------------------------- */
 html {
-    position: relative;
-    min-height: 100%;
+  position: relative;
+  min-height: 100%;
 }
 body {
-margin-bottom: 60px;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
 }
-#footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #f5f5f5;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
 
 body > .container {
-    padding: 60px 15px 0;
+  padding: 60px 15px 0;
 }
 .container .text-muted {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
-#footer > .container {
-    padding-right: 15px;
-    padding-left: 15px;
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 code {
-    font-size: 80%;
+  font-size: 80%;
 }
-ul.error {
-    padding: 0;
-    list-style-type: none;
-}
-ul.error li {
-    padding: 15px;
-    background-color: #f2dede;
-    color: #a94442;
-    border-radius: 4px;
-    border: 1px solid #ebccd1;
+
+.ui-autocomplete {
+    position: absolute !important;
+    top: 342px !important;
 }
