--- a/app/templates/Homepage.create.latte
+++ b/app/templates/Homepage.create.latte
@@ -2,6 +2,7 @@
 <div class="row">
     <div class="col-md-6">
         {form createStaff}
+            {control $form errors}
             <div class="form-group">
                 {label name /}
                 {input name class=>"form-control"}
